syntax = "proto3";

option java_package = "ru.microservices.proto";

option java_multiple_files = true;

// COMMON
import "google/protobuf/empty.proto";


// REQUESTS
import "internal/request/UserByIdsRequest.proto";

// RESPONSES
import "internal/response/UserListResponse.proto";


service UserService{
  rpc getUserById(UserByIdsRequest) returns (UserListResponse){}
  rpc getAllUser(google.protobuf.Empty) returns(UserListResponse){}
  rpc existUserByUsername() returns {}
  rpc getUserByUsername() returns (UserListResponse) {}
}

